Fixes explosion visibility on gamePaused

--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,7 @@ main {
 
 #gameOver {
   display: none;
+  position: absolute;
   width: 1000px;
   height: 500px;
   margin-top: 18px;
@@ -228,12 +229,13 @@ main {
 
 #pausedGame {
   display: none;
+  position: absolute;
   width: 1000px;
   height: 500px;
   margin-top: 18px;
   border-radius: 44px;
   margin-left: 396px;
-  z-index: 1000;
+  z-index: 900;
   color: #ffffff;
   background-image: url("../assets/images/falling_blossoms.gif");
   background-size: cover;
